[REFACTOR] notification controller tests